--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>BopomofoTyper(beta)</title>
   </head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VQFH2X0VY8"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L3SXTFXBC4"></script>
   <script>
     window.dataLayer = window.dataLayer || []
     function gtag() {
@@ -15,7 +16,7 @@
     }
     gtag('js', new Date())
 
-    gtag('config', 'G-VQFH2X0VY8')
+    gtag('config', 'G-L3SXTFXBC4')
   </script>
   <body>
     <div id="app"></div>
