add mastodon button

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       if (userLang) {
         if (userLang.startsWith('ja')) {
           htmlElement.setAttribute('lang', 'ja')
-          titleTag.innerText = 'ボポモフォタイパー（ベータ版）'
+          titleTag.innerText = 'ボポモフォとくだー（ベータ版）'
           descriptionTag.setAttribute('content', 'ボポモフォのタイピング練習ができるサイトです。')
         } else {
           htmlElement.setAttribute('lang', 'en')
-          titleTag.innerText = 'BopomofoTyper(beta)'
+          titleTag.innerText = 'Bopomofo Typer(beta)'
           descriptionTag.setAttribute('content', "Let's practice Bopomofo typing!")
         }
       }
