--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="description" id="descriptionTag" content="" />
+    <meta name="keywords" content="ボポモフォ, 注音符号, Bopomofo, Zhuyin, 注音符號" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bopomofo Typer(beta)</title>
