--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="app"></div>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=G55lskJH"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
