change ja title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       if (userLang) {
         if (userLang.startsWith('ja')) {
           htmlElement.setAttribute('lang', 'ja')
-          titleTag.innerText = 'ボポモフォとくだー（ベータ版）'
+          titleTag.innerText = 'ボポモフォたいぱあ（ベータ版）'
           descriptionTag.setAttribute('content', 'ボポモフォのタイピング練習ができるサイトです。')
         } else {
           htmlElement.setAttribute('lang', 'en')
